# ANPR-India

./: .gitignore  Dockerfile  QUICK_START.md  README.md  deploy.sh  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  setup.py  test_results.csv  yolov5_pytorch_security_fix.patch
anpr_system/: __init__.py  cli.py  core.py  utils.py  web_app.py
legacy/: README.md  anpr-system.py
notebooks/: ANPR_with_Tracking.ipynb
